force-app/main/default/objects/Onboarding_Status_Rule__c/Onboarding_Status_Rule__c.object-meta.xml
<CustomObject>
    <label>Onboarding Status Rule</label>
    <nameField>
        <displayFormat>ONBSR-{00000}</displayFormat>
        <label>Onboarding Status Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Status Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>