force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Version</label>
    <referenceTo>Onboarding_Status_Rule__c</referenceTo>
    <relationshipLabel>Onboarding Status Rules</relationshipLabel>
    <relationshipName>Onboarding_Status_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>