force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Rule_Number__c.field-meta.xml
<CustomField>
    <fullName>Rule_Number__c</fullName>
    <label>Rule Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>